--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
 			</exclusions>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>5.3.19</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
